Email Update contact.html

--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
         <div class="container">
             <div class="details-box">
                 <h3>Email</h3>
-                <p>info@almanakeb.uk</p>
+                <p>almanakebukltd@gmail.com</p>
             </div>
             <div class="details-box">
                 <h3>Phone</h3>
