Email Update index.html

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                     <div class="accordion-body">
-                        You can contact us via the form on our Contact page or directly through our email at info@almanakebuk.com.
+                        You can contact us via the form on our Contact page or directly through our email at almanakebukltd@gmail.com
                     </div>
                 </div>
             </div>
